samples/_failures_safe/1761363252_45f3b1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2dc4de68.c: In function ‘lexer_next_token’:
./samples/SAFE/__tmp_2dc4de68.c:143:26: error: missing terminating ' character
  143 |         token.value[i] = '\0
      |                          ^~~
./samples/SAFE/__tmp_2dc4de68.c:143:9: error: expected expression at end of input
  143 |         token.value[i] = '\0
      |         ^~~~~
./samples/SAFE/__tmp_2dc4de68.c:143:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2dc4de68.c:143:9: error: expected declaration or statement at end of input
